# terraform-index

./: .env.cloud  .env.kubernetes  .env.local  .env.prod  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/indexer/: __init__.py  es.py  logging.py  main.py  main_old.py  pipeline.py
backend/src/indexer/collector/: __init__.py  base.py  composite.py  filesystem.py  kubernetes.py  s3.py
backend/src/indexer/parser/: tfstate.py
backend/src/indexer/queue/: __init__.py  base.py  memory.py  sqs.py
backend/tests/integration/: test_integration.py
backend/tests/unit/: test_collector.py  test_filesystem_collector.py  test_parser.py  test_parser_mixed.py  test_queue.py
examples/: sample-terraform.tfstate  setup-demo.sh
scripts/: demo.py  demo_kubernetes.py  run_component.py  seed_s3.py  simple_demo.py  test_components.py
tfstates/: database-cluster.tfstate  example-web-app.tfstate
ui/: package-lock.json  package.json  server.js
ui/public/: app.js  index.html
